--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         <div class="group_bank">
             <strong class="head_bank">신부측 계좌번호<span class="ico_arrow"></span></strong>
             <div class="box_bank">
-                <span class="txt_bank">이혜은<br><span class="num_bank">333310-4393652 카뱅</span><a href="https://lightrune.github.io/wedding-invite/" class="link_copy">복사하기</a></span>
+                <span class="txt_bank">이혜은<br><span class="num_bank">3333-10-4393652 카카오뱅크</span><a href="https://lightrune.github.io/wedding-invite/" class="link_copy">복사하기</a></span>
             </div>
         </div>
     </div>
