index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </table>
     </div>
     <div class="info_day">
-        <strong class="txt_date">2025년 9월 28일(토) 오후 16시 00분</strong>
+        <strong class="txt_date">2025년 9월 28일(일) 오후 16시 00분</strong>
         <em class="emph_time">더 세인트 41층 파노라마홀</em>
     </div>
 </div>
