--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://lightrune.github.io/wedding-invite/">
     <meta property="og:title" content="최성열 ♡ 이혜은 결혼합니다.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.small-square.com/invite/250920_taehwan_yuri/images/photo_preview2.jpg?=080620">
+    <meta property="og:image" content="https://github.com/lightrune/wedding-invite/blob/main/%EC%B5%9C%EC%84%B1%EC%97%B4%20%E2%99%A1%20%EC%9D%B4%ED%98%9C%EC%9D%80%20%EA%B2%B0%ED%98%BC%ED%95%A9%EB%8B%88%EB%8B%A4._files/photo_preview2.jpg">
     <meta property="og:description" content="청첩장 보러가기">
     <link href="./최성열 ♡ 이혜은 결혼합니다._files/css2" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
